# waves

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
input/: sample.json
output/: sample.txt
readme/: README.zh-CN.md
src/: array_math.rs  dimension.rs  input_json.rs  main.rs  particle.rs  vector.rs  vector3d.rs
