[package]
name = "longitudinal_waves"
version = "0.1.0"
edition = "2024"
description = "A simulation of longitudinal waves in masses connected by linear springs."
readme = "README.md"
repository = "https://github.com/Eric2422/longitudinal-waves"
license = "MIT"

[dependencies]
serde_json = "1.0.150"
thiserror = "2.0.18"
